# LLM-Python-Boilerplate

./: .gitignore  CHAINED_TOOLS_SUMMARY.md  CONVERSATION_TESTING_SUMMARY.md  ENV_SETUP.md  INSTALLATION_GUIDE.md  LLM_CHEAT_SHEET.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_TEST_SCRIPT.md  SYSTEM_DOCUMENTATION.md  USAGE_EXAMPLES.md  main.py  pyproject.toml  requirements.txt  setup.py  test_llm_hello_fixed.py  test_llm_hello_installed.py
agents/: secretary.py
config/: README.md  TESTING_SUMMARY.md  aws.py  redis.py
demos/: __init__.py
demos/flask/: README_FLASK_API.md  __init__.py  flask_chat_client.py  flask_chat_server.py  requirements_flask.txt  run_flask_demo.py
demos/interactive/: README_INTERACTIVE_DEMOS.md  __init__.py  interactive_chat_demo.py  interactive_tools_demo.py
demos/tts/: __init__.py
model_calling/: invoke.py
src/: __init__.py
src/core/: __init__.py  azure.py  bbc_rss.py  model_router.py  tool_index.py
src/ultimate_llm_toolkit/: __init__.py  aws_bedrock.py  azure.py  example_usage.py  model_router.py  toolkit.py  wikipedia_api.py
tests/: __init__.py  run_all_tests.py
tests/api/: __init__.py  test_conversation_demo.py  test_conversation_with_tools.py  test_flask_api.py  test_simple_conversation.py
tests/debug/: __init__.py  debug_aws_bedrock.py  debug_model_router.py
tests/integration/: __init__.py  test_chained_tools_demo.py  test_fallback_demo.py  test_simple_tools.py  test_single_tool_calls.py  test_working_chained_demo.py
tests/unit/: __init__.py  test_model_router.py  test_specific_use_cases.py  validate_router.py
tools/config/: tool_index.py  tool_router.py
tools/tool_modules/: time_and_date.py  web_search_brave.py
